[package]
name = "autct"
version = "0.0.1"
edition = "2021"

[dependencies]
rand = { version = "0.8", default-features = false }
bulletproofs = { git = "https://github.com/AdamISZ/curve-trees", rev = "513597a7ab9f5cc78fa3708cfc21fe6652624f5e" }
relations = { git = "https://github.com/AdamISZ/curve-trees", rev = "513597a7ab9f5cc78fa3708cfc21fe6652624f5e" }
ark-ff = { version = "0.4.0"}
ark-ec = { version = "0.4.0"}
ark-serialize = { version = "0.4.0" } 
ark-std = { version = "0.4.0"}
ark-secp256k1 = "0.4.0"
ark-secq256k1 = "0.4.0"
merlin = { version = "2", default-features = false }
rust-crypto = "^0.2"
ark-crypto-primitives = { version = "0.4.0", features = ["signature"]}
digest = "0.9"
blake2 = "0.10"
rayon = {version = "1.5.3", optional = true}
hex = {version ="0.4.3", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
toy-rpc = { version = "0.8.1", features = ["tokio_runtime", "server", "client"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
[dev-dependencies]
criterion = "0.3"

[[bin]]
name = "autct"
path = "src/autct.rs"

[[bin]]
name = "rpcserver"
path = "src/rpcserver.rs"

[[bin]]
name = "rpcclient"
path = "src/rpcclient.rs"


[features]
default = ["asm"]
asm = ["ark-ff/asm","bulletproofs/asm"]
parallel = ["rayon", "ark-ec/parallel", "ark-ff/parallel", "ark-std/parallel", "bulletproofs/parallel"]
bench_prover = []
detailed_benchmarks = []
usenix = ["bench_prover"]
table1 = ["usenix"]
table2 = ["usenix"]
table3 = ["usenix"]
all-tables = ["table1", "table2", "table3"]


[profile.release]
lto = true

[profile.test]
debug = false
debug-assertions = false

[build]
 # Adds architecture specific optimizations including those enabling the asm backend for ark_ff. It could potentially cause slowdowns from other features.
rustflags = "-C target-cpu=native"
 # You could alternatively add support for the asm backend through "-C target-feature=+bmi2,+adx", but the binary would only run on systems supporting these instructions.
