[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "autctbind"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[package]
name = "autct"
version = "0.0.1"
edition = "2021"

[dependencies]
pyo3 = "0.21.1"
rand = { version = "0.8", default-features = false }
bulletproofs = { git = "https://github.com/AdamISZ/curve-trees", rev = "d76bd2837d4556b1d451055e4c381e5cb5abd00c" }
relations = { git = "https://github.com/AdamISZ/curve-trees", rev = "d76bd2837d4556b1d451055e4c381e5cb5abd00c" }
ark-ff = { version = "0.4.0"}
ark-ec = { version = "0.4.0"}
ark-serialize = { version = "0.4.0" } 
ark-std = { version = "0.4.0"}
ark-secp256k1 = "0.4.0"
ark-secq256k1 = "0.4.0"
merlin = { version = "2", default-features = false }
rust-crypto = "^0.2"
ark-crypto-primitives = { version = "0.4.0", features = ["signature"]}
digest = "0.9"
blake2 = "0.10"
rayon = {version = "1.5.3", optional = true}
hex = {version ="0.4.3", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
toy-rpc = { version = "0.8.1", features = ["tokio_runtime", "server", "client"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
confy = "^0.5"
clap = { version = "4", features = [
    "derive",
    "color",
    "env",
    "help",
] }
toml = "0.7"
blocks_iterator = {git = "https://github.com/RCasatta/blocks_iterator", rev = "a3eb1b2b9da52f8d9a3e24e8950aa2581696616e" }
bitcoin = { version = "0.31.1", features = ["serde", "rand-std"] }
structopt = "0.3.21"
env_logger = "0.10"
itertools = "0.12"
base64 = "^0.22.0"

#[[bin]]
#name = "autct"
#path = "src/autct.rs"

[features]
default = ["asm"]
asm = ["ark-ff/asm","bulletproofs/asm"]
parallel = ["rayon", "ark-ec/parallel", "ark-ff/parallel", "ark-std/parallel", "bulletproofs/parallel"]
bench_prover = []
detailed_benchmarks = []
usenix = ["bench_prover"]
table1 = ["usenix"]
table2 = ["usenix"]
table3 = ["usenix"]
all-tables = ["table1", "table2", "table3"]


[profile.release]
lto = true

[profile.test]
debug = false
debug-assertions = false

[build]
 # Adds architecture specific optimizations including those enabling the asm backend for ark_ff. It could potentially cause slowdowns from other features.
rustflags = "-C target-cpu=native"
 # You could alternatively add support for the asm backend through "-C target-feature=+bmi2,+adx", but the binary would only run on systems supporting these instructions.
